# mc-gui-crafter

./: .gitignore  CODEX_CODE_REVIEW.md  DEEPSEEK_CODE_REVIEW.md  GEMINI_CODE_REVIEW.md  README.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.agents/skills/mc-gui-crafter/: SKILL.md
.pi/state/: delegation-audit.jsonl
docs/: architecture.md  feedback.md  mcp-e2e-machine-test.md  mcp.md  roadmap.md
docs/adr/: 001-technology-stack.md  002-project-format.md  003-mcp-integration.md  004-coordinate-system.md  005-export-system.md
docs/superpowers/archive/: README.md
docs/superpowers/plans/: 2026-05-17-phase-1-5-remediation.md  2026-05-17-phase-6-polish.md  2026-05-18-phase6x-review-fixes.md  2026-05-18-phase6x-templates-fonts-layers-plan.md  2026-05-23-mcp-ui-polish-v2.md  2026-05-23-minecraft-visual-fidelity.md  2026-05-23-semantic-inventory-scrollbar.md  2026-05-24-editor-ux-polish.md  2026-05-24-mcp-reliability-alpha.md  2026-05-25-visual-authoring-alpha.md  (+2 more)
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  session_log.rs  startup.rs  texture_pack.rs
src-tauri/src/animation/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/font/: glyph_map.rs  mod.rs  parser.rs  rasterizer.rs
src-tauri/src/format/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/project/: mod.rs
src-tauri/src/templates/: mod.rs
src-tauri/src/texture/: generator.rs  mod.rs
src/lib/: api.test.ts  api.ts  guiPresets.ts  types.ts
(+49 files in other folders)
